# Internet-of-Things-Projects-with-ESP32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
Chapter01/blinking/: CMakeLists.txt  sdkconfig
Chapter01/blinking/main/: CMakeLists.txt
Chapter02/dhtdemo/: CMakeLists.txt  Makefile  sdkconfig
Chapter02/dhtdemo/main/: CMakeLists.txt  dhtdemo.c
Chapter02/lcddemo/: Makefile  sdkconfig
Chapter02/weather/: CMakeLists.txt  Makefile  sdkconfig
Chapter02/weather/main/: weather.c
Chapter03/buzzer/: CMakeLists.txt  sdkconfig
Chapter03/buzzer/main/: CMakeLists.txt
Chapter03/game/: Makefile  sdkconfig
Chapter03/joystickdemo/: Makefile
Chapter04/logger/: sdkconfig
Chapter04/logger/components/esp_idf_lib_helpers/: esp_idf_lib_helpers.h
Chapter04/logger/main/: logger.c
Chapter05/http_request/: sdkconfig
Chapter05/wificonnect/: sdkconfig
Chapter05/wifiscan/: sdkconfig
Chapter06/weatherweb/main/: weatherweb.c
Chapter07/gpsdemo/: sdkconfig
Chapter07/gpsdemo/main/: CMakeLists.txt
Chapter08/wificam/: sdkconfig
Chapter08/wificam/main/: CMakeLists.txt
Chapter09/smartmobile/: sdkconfig
chapter10/: sdkconfig
chapter10/main/: CMakeLists.txt
