cmake_minimum_required(VERSION 3.5)
include($ENV{IDF_PATH}/tools/cmake/project.cmake)
set(PROJECT_NAME iot_esp32)
project(${PROJECT_NAME})

#add_subdirectory(Chapter01/blinking/)

#add_subdirectory(Chapter02/dhtdemo)
#add_subdirectory(Chapter02/lcddemo)
#add_subdirectory(Chapter02/weather)
#
#add_subdirectory(Chapter03/buzzer)
#add_subdirectory(Chapter03/game)
#add_subdirectory(Chapter03/joystickdemo)
#
#add_subdirectory(Chapter04/logger)
#
#add_subdirectory(Chapter05/http_request)
#add_subdirectory(Chapter05/webserver)
#add_subdirectory(Chapter05/wificonnect)
#add_subdirectory(Chapter05/wifiscan)
#
#add_subdirectory(Chapter06/weatherJS)
#add_subdirectory(Chapter06/weatherweb)
#
#add_subdirectory(Chapter07/gpsdemo)
#
#add_subdirectory(Chapter08/wificam)
#
#add_subdirectory(Chapter09/android)
#add_subdirectory(Chapter09/smartmobile)
#
#add_subdirectory(Chapter10)
